codama-macros/tests/codama_attribute/values_nodes/program/no_input.fail.rs
use codama_macros::codama;

#[codama(default_value = program)]
pub struct Test;

#[codama(default_value = program())]
pub struct TestWithParenthesis;

fn main() {}